# github-fs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCS.md  README.md  example.config.toml  flake.nix  install.sh  release-please-config.json
.github/workflows/: build-release.yml
src/: lib.rs  main.rs
src/cache/: blobs.rs  clones.rs  errors.rs  meta.rs  mod.rs  schema.sql
src/cli/: branch.rs  info.rs  mod.rs  mount.rs  promote.rs  refresh.rs  status.rs  unmount.rs  whoami.rs
src/config/: mod.rs  token.rs
src/fs/: attr.rs  inode.rs  mod.rs  open_files.rs
src/github/: errors.rs  graphql.rs  mod.rs  pagination.rs  types.rs
tests/: blobs_mock.rs  branches_mock.rs  fuse_smoke.rs  graphql_branches_mock.rs  graphql_warmup_mock.rs  refresh_mock.rs  repos_mock.rs  trees_mock.rs  whoami_mock.rs
